# nba-basketball-data

./: README.md  drop_tables.sql  pyproject.toml  scrapy.cfg
nbabasketball/: common.py  items.py  middlewares.py  models.py  nba_games.py  nba_games.sh  nba_players.py  nba_players.sh  nba_stats.py  nba_stats.sh  nba_teams.py  nba_teams.sh  parsers.py  pipelines.py  settings.py
nbabasketball/spiders/: nbagamespider.py  nbaplayerspider.py  nbaspider.py  nbastatspider.py  nbateamspider.py
