[tool.poetry]
name = "nbabasketball"
version = "0.1.0"
description = "NBA Basketball Data"
authors = ["Edilou Bernardino <ediloub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.8.0"
sqlalchemy = "^2.0.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
