[tool.poetry]
name = "nbabasketball"
version = "0.1.0"
description = "NBA Basketball Data"
authors = ["Edilou Bernardino <ediloub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.9"
python-dotenv = "^1.0.0"
scrapy-user-agents = "^0.1.1"
scrapy = "^2.8.0"
pymysql = "^1.0.3"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
